k8s/aws/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      affinity:
       nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchExpressions:
            - key: "vpc.amazonaws.com/has-trunk-attached"
              operator: In
              values:
                - "true"
      containers:
        - name: api
          image: bryi/api
          ports:
            - containerPort: 5000
