k8s/aws/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5001
      #nodePort: 31515
  selector:
    component: web
